--- a/www/index.html
+++ b/www/index.html
@@ -22,5 +22,6 @@
     </body>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="js/lodash.js"></script>
     <script src="js/index.js"></script>
 </html>
