WIP frontend conversion to react

--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Scope</title>
-        <link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
     <body>
+        <div id="app"></div>
+
         <div id="video-browser">
         </div>
         <div id="main-panel">
@@ -20,8 +21,6 @@
             <input id="threshold-input" type="number" min="0" max="1" step="any"/>
         </div>
     </body>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="js/lodash.js"></script>
-    <script src="js/index.js"></script>
+    <script src="bundle.js"></script>
 </html>
